--- a/python.ipynb
+++ b/python.ipynb
@@ -6,7 +6,7 @@
       "name": "python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPmrkcVOncnkPOCBaMXhZMm",
+      "authorship_tag": "ABX9TyO+Z+E+MaospiHhH0xNWQ07",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -244,13 +244,529 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#Declare a variable\n",
+        "Number=25\n",
+        "Name=\"Kiran\"\n",
+        "B=3.5\n",
+        "print(Number)\n",
+        "print(Name)\n",
+        "print(B)"
       ],
       "metadata": {
-        "id": "45I2mXwjYBWz"
+        "id": "45I2mXwjYBWz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "56a719b1-b32a-46e7-a9f8-3c49530772e9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "25\n",
+            "Kiran\n",
+            "3.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Multiple assignment\n",
+        "x=y=z=\"SoftwareTestingHelp\"\n",
+        "print(x)\n",
+        "print(y)\n",
+        "print(z)\n",
+        "a,b,c=5,3.2,\"Hello\"\n",
+        "print(a)\n",
+        "print(b)\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Rnh24ioZkcLr",
+        "outputId": "2dffe778-a451-49a9-eb12-b7bc4a46774e"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "SoftwareTestingHelp\n",
+            "SoftwareTestingHelp\n",
+            "SoftwareTestingHelp\n",
+            "5\n",
+            "3.2\n",
+            "Hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Numbers\n",
+        "a=5\n",
+        "print(a,\"is of type\",type(a))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uyRaW6LykcOg",
+        "outputId": "7d631754-4a39-4e73-99f1-91a96a29fb1b"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 is of type <class 'int'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#String\n",
+        "String1=\"Welcome\"\n",
+        "String2=\"To python\"\n",
+        "print(String1+String2)\n",
+        "#slicing\n",
+        "print(String1[2:5])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0KtZ-PqmkcRY",
+        "outputId": "71b6c473-1cb7-4b77-b3c8-16fa99672598"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "WelcomeTo python\n",
+            "lco\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#List\n",
+        "List=[2,4,5,5,\"Hi\"]\n",
+        "print(\"List[2]\",List[2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HCDsm2tNkcUA",
+        "outputId": "78944ab3-6619-4567-b8c6-407efbcba7eb"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "List[2] 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Tuple\n",
+        "Tuple=(50,15,25.6,\"Python\")\n",
+        "print(\"Tuple[1]=\",Tuple[1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NXDFPK6gkcWo",
+        "outputId": "69fbbd49-e8ed-4be2-82a4-f07f7bb56115"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tuple[1]= 15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Set\n",
+        "Set={5,1,2.6,\"python\"}\n",
+        "print(Set)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TMwRfl-2kcZl",
+        "outputId": "68e9b115-b639-41c5-d863-c28db7d6038b"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2.6, 'python', 5}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Dictionary\n",
+        "Dict={1:'Hi',2:7.5,3:'Class'}\n",
+        "print(Dict)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CHJ6EjIAkccR",
+        "outputId": "5fa156bf-3c06-4c0a-f10f-6a51ca5c873e"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1: 'Hi', 2: 7.5, 3: 'Class'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=15\n",
+        "y=10\n",
+        "print('x+y=',x+y)\n",
+        "print('x-y=',x-y)\n",
+        "print('x*y=',x*y)\n",
+        "print('x/y=',x/y)\n",
+        "print('x//y=',x//y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FjypPQkpkcem",
+        "outputId": "dde2226d-6fb8-4c66-abda-2cd76d7d227b"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x+y= 25\n",
+            "x-y= 5\n",
+            "x*y= 150\n",
+            "x/y= 1.5\n",
+            "x//y= 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#comparison Operators\n",
+        "x=8\n",
+        "y=15\n",
+        "print('x>y is',x>y)\n",
+        "print('x<y is',x<y)\n",
+        "print('x==y is',x==y)\n",
+        "print('x!=y is',x!=y)\n",
+        "print('x>=y is',x>=y)\n",
+        "print('x<=y is',x<=y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rUBTsz4jkxyh",
+        "outputId": "c8798f98-c0fe-434b-f3cd-fffc3ab55a13"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x>y is False\n",
+            "x<y is True\n",
+            "x==y is False\n",
+            "x!=y is True\n",
+            "x>=y is False\n",
+            "x<=y is True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#logical operators\n",
+        "a=True\n",
+        "b=False\n",
+        "print('a and b is',a and b)\n",
+        "print('a or b is',a and b)\n",
+        "print('a not b is',a and b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mAzwhVMykx3x",
+        "outputId": "494fe251-91c4-4f6f-e81f-eeb655b8bf96"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a and b is False\n",
+            "a or b is False\n",
+            "a not b is False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#identity operator\n",
+        "a1=3\n",
+        "b1=3\n",
+        "a2=\"Python\"\n",
+        "b2=\"Python\"\n",
+        "a3=[4,5,6]\n",
+        "b3=[4,5,6]\n",
+        "print(a1 is not b1)\n",
+        "print(a2 is b2)\n",
+        "print(a3 is b3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "60fdCSd4kx6g",
+        "outputId": "d2bb19ad-72d1-49a7-ad44-195c043d3d8a"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Membership operator\n",
+        "a=\"Python operators\"\n",
+        "b={1:'x',2:'y'}\n",
+        "print(\"P\" in a)\n",
+        "print(1 in b)\n",
+        "print('y' in b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_nXnroDikx9K",
+        "outputId": "259a3cd7-70b2-4181-cf70-50e7dbf4013e"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#if statement\n",
+        "num=5\n",
+        "if( num<10):\n",
+        "  print(\"Num is smaller than 10\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f_Rfgozzkx_x",
+        "outputId": "93c346f9-d046-4a3f-a556-7013735e2bee"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Num is smaller than 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#if-else statement\n",
+        "num=5\n",
+        "if(num>10):\n",
+        "  print(\"number is greater than 10\")\n",
+        "else:\n",
+        "  print(\"number is less than 10\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "70pJie0xkyB8",
+        "outputId": "79339aea-ef28-4913-e552-37e1cbdc677a"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "number is less than 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#elif statements\n",
+        "num=10\n",
+        "if(num==0):\n",
+        "  print(\"Number is Zero\")\n",
+        "elif(num>5):\n",
+        "  print(\"Number is greater than 5\")\n",
+        "else:\n",
+        "  print(\"Number is smaller than 5\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2MbWTvyakyEm",
+        "outputId": "2a854c89-1fbb-4e5b-d230-cdf859bc2259"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number is greater than 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#nested if-else statements\n",
+        "num=5\n",
+        "if(num>0):\n",
+        "  print(\"number is positive\")\n",
+        "if(num<10):\n",
+        "  print(\"number is less than 10\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "odtX1SqOkyHS",
+        "outputId": "a3128839-1ff0-42db-8f78-c7688d13c060"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "number is positive\n",
+            "number is less than 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#elif ladder\n",
+        "my_marks=90\n",
+        "if(my_marks<35):\n",
+        "  print(\"Sorry!,You failed the exam\")\n",
+        "elif(my_marks>60 and my_marks>100):\n",
+        "  print(\"Passed in First class\")\n",
+        "else:\n",
+        "  print(\"Passed in First class\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V6wK-qP0kyJ2",
+        "outputId": "541c8bc8-0f03-4329-edb7-32c080387de0"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Passed in First class\n"
+          ]
+        }
+      ]
     }
   ]
 }
